# SimpleOpenGLStarter

./: CMakeLists.txt
include/: camera.h  component.h  cube.h  game_object.h  mtime.h  rigid_body_component.h  scene.h  texture_manager.h
scenes/: Simple Scene.txt
src/: camera.cpp  cube.cpp  game_object.cpp  main.cpp  mtime.cpp  rigid_body_component.cpp  scene.cpp  texture_manager.cpp
src/demos/: simple_scene.cpp
